html editor task 06 in progress